--- a/style.css
+++ b/style.css
@@ -50,17 +50,36 @@ input {
   margin-bottom: 10px;
   outline: none;
 }
-button{
-    background-color: antiquewhite;
-    margin-top: 20px;
-    padding: 20px;
-    border: none;
-    cursor: pointer;
-    font-size: large;
-    margin-bottom: 20px;
-    font-weight: 900;
+button {
+  background-color: antiquewhite;
+  margin-top: 20px;
+  padding: 20px;
+  border: none;
+  cursor: pointer;
+  font-size: large;
+  margin-bottom: 10px;
+  font-weight: 900;
 }
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
+  font-weight: 900;
+}
+h1{
+    position: relative;
+    bottom: 100px;
+    text-transform: capitalize;
+    font-weight: bold;
+    font-size: 3rem;
+}
+.paragraphe{
+    position: relative;
+    bottom: 80px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    padding: 20px;
+    line-height: 1.5;
+}
+.login{
     font-weight: 900;
+    font-size: 1.1rem;
 }
