--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@
   background-repeat: no-repeat;
   background-size: cover;
   width: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .formulaire {
   width: 60%;
@@ -82,4 +85,16 @@ h1{
 .login{
     font-weight: 900;
     font-size: 1.1rem;
+}
+.logo{
+    width: 80%;
+    height: 200px;
+    background-color: black;
+    opacity: 0.5;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    font-weight: 900;
 }
