--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ input {
   border: 1px solid #e5e7eb;
   margin-bottom: 10px;
   outline: none;
+  padding-left: 5px;
+  padding-top: 10px;
 }
 input::placeholder{
     color: #d8d8d8;
